# geo-processor

./: .env.rename  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
app/: .dockerignore  config.py  main.py  middleware.py  models.py  router.py
tests/: test_api.py  test_auth.py
